fix pass visibility toggling

--- a/src/popup/new_account_view/account_form/pass_field/pass_field.css
+++ b/src/popup/new_account_view/account_form/pass_field/pass_field.css
@@ -35,12 +35,16 @@
     padding-top: 8px;
     cursor: pointer;
 
-    &.preview--hidden::after {
-      content: url('~assets/eye_closed.svg');
+    &.preview--visible {
+      top: 5px;
+
+      &::after {
+        content: url('~assets/eye_opened.svg');
+      }
     }
 
-    &.preview--visible::after {
-      content: url('~assets/eye_opened.svg');
+    &.preview--hidden::after {
+      content: url('~assets/eye_closed.svg');
     }
   }
 
